Complete project with all the necessary requirements covered

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ PORT=<PORT>
 MONGO_URL=<YOUR_MONGO_URL>
 JWT_SECRET=<YOUR_SECRET_KEY>
 SALT_PW=<BCRYPT_SALT>
+SMTP_PASS=<SMTP-app-password>
+SMTP_EMAIL=<email>
+CLOUDINARY_CLOUD_NAME=<cloudname>
+CLOUDINARY_API_SECRET=<api-secret>
+CLOUDINARY_API_KEY=<api-key>
