--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon app.js",
+        "start": "nodemon app.js & node cron/jobs/medicationReminder.js & node cron/workers/medReminder.worker.js & node cron/jobs/reportScheduler.js & node cron/workers/report.worker.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -13,13 +13,20 @@
     "dependencies": {
         "bcryptjs": "^3.0.2",
         "body-parser": "^1.20.3",
+        "bullmq": "^5.41.7",
+        "cloudinary": "^2.5.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "fast-csv": "^5.0.2",
         "helmet": "^8.0.0",
+        "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
+        "moment-timezone": "^0.5.47",
         "mongoose": "^8.12.1",
         "morgan": "^1.10.0",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.10.0",
         "nodemon": "^3.1.9",
         "winston": "^3.17.0"
